--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://georgekibew:Y1MtXJPkAHvmWX0z@cluster0.5rx4ksc.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://georgekibew:Y1MtXJPkAHvmWX0z@cluster0.5rx4ksc.mongodb.net/RealEstateDatabase?retryWrites=true&w=majority
