uploading images to s3 bucket functions

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://georgekibew:Y1MtXJPkAHvmWX0z@cluster0.5rx4ksc.mongodb.net/RealEstateDatabase?retryWrites=true&w=majority
+S3_ACCESS_KEY=AKIARHT4T6CN2UOBBRX4
+S3_SECRET_ACCESS_KEY=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
